dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

VERSION=`cat ${srcdir}/VERSION`
RPMNAME=`cat ${srcdir}/RPMNAME`
MAINTAINER=`cat ${srcdir}/MAINTAINER`
YAST2DOC=/usr/share/doc/packages/$RPMNAME
YAST2DIR=/usr/lib/YaST2
YAST2INC=/usr/include/YaST2

prefix=$YAST2DIR
includedir=$YAST2INC
libdir=/usr/lib

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(YAST2DOC)
AC_SUBST(YAST2DIR)
AC_SUBST(YAST2INC)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_PROG(GPERF, gperf, false)
if test "$GPERF" = "false"; then
	AC_MSG_ERROR([gperf not installed])
	exit
fi

CFLAGS="${CFLAGS} -DY2LOG='\"@RPMNAME@\"' -Wall -Wmissing-prototypes -Wformat"
CXXFLAGS="${CXXFLAGS} -DY2LOG='\"@RPMNAME@\"' -Wall -Wmissing-prototypes -Wformat"

AC_DISABLE_STATIC
AM_PROG_LIBTOOL dnl for libraries

dnl Lex and Yacc sources

AM_PROG_LEX
AC_CHECK_PROGS(YACC, 'bison -y -d -v' byacc, yacc)

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

AC_FUNC_ALLOCA
AC_HEADER_STDC

#yast_found_liby2util=no
#AC_CHECK_HEADER(YaST2/y2util/Ustring.h,[yast_found_liby2util=yes])
#if [[ "$yast_found_liby2util" = "no" ]]; then
# AC_MSG_ERROR(Headers for liby2util are missing. Please install the package liby2util-devel.)
#fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_OUTPUT(
	Makefile
	package/libycp.spec:libycp.spec.in
	src/Makefile
	src/include/Makefile
	src/include/ycp/Makefile
	doc/Makefile
	doc/YCP-quoting.html
	doc/YCP-statements.html
	doc/YCP-datatypes.html
        doc/YCP-operators.html
	doc/autodocs/Makefile
	testsuite/Makefile
	testsuite/config/Makefile
	testsuite/lib/Makefile
	testsuite/libycp.test/Makefile
	testsuite/tests/Makefile
)
